--- a/default.project.json
+++ b/default.project.json
@@ -22,7 +22,11 @@
         }
       }
     },
+    "StarterPack" : {
+      "$className": "StarterPack",
+      "$path": "src/starter_pack"
 
+    },
     "Workspace": {
       "$properties": {
         "FilteringEnabled": true
